--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -57,10 +57,6 @@ tbody tr:nth-child(-n+1) {
     font-weight: bold;
 }
 
-.page-header {
-    background-color: white;
-}
-
 h2 {
     font-size: 25px;
     text-shadow: 1px 1px 5px black;
@@ -75,6 +71,7 @@ h2 small {
 }
 
 .page-header {
+    background-color: white;
     box-shadow: 5px 5px;
     padding: 5px;
     margin: 0px;
@@ -82,6 +79,11 @@ h2 small {
 
 .page-header h1 {
     margin: 5px;
+}
+
+.page-header div {
+    float: right;
+    margin-top: -80px;
 }
 
 #background {
