--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,11 @@
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
 .display-none {
     display: none;
 }
@@ -70,20 +78,20 @@ h2 small {
     font-size: 50%;
 }
 
-.page-header {
+.board-header .strava {
+    float: right;
+}
+
+.board-header .nav {
+    margin-top: 25px;
+    margin-left: 10px;
+}
+
+.board-header {
     background-color: white;
     box-shadow: 5px 5px;
     padding: 5px;
     margin: 0px;
-}
-
-.page-header h1 {
-    margin: 5px;
-}
-
-.page-header div {
-    float: right;
-    margin-top: -80px;
 }
 
 #background {
