clean up, add bigger jerseys

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -35,6 +35,12 @@
   margin-right: 10px;
 }
 
+.jersey-xl {
+  height: 90px;
+  width: 90px;
+  margin-right: 10px;
+}
+
 .avatar {
     height: 32px;
     width: 32px;
