--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,12 @@
+a, a:active, a:visited, a:link, a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    font-weight: bold;
+}
+
 .float-left {
     float: left;
 }
